====== inet-3.x ======

2015-10-10  Andras Varga

	Removed external queue support, i.e. the mgmt submodule in the Nic no
	longer serves as a passive queue for the MAC. This changes the results
	of some example simulations (about 4 of ~50), because e.g. the max queue
	lengths were configured to different values for the mgmt queue and the
	internal queue, and also the mgmt queue never supported the
	prioritizeMulticast option that the MAC supports for the internal queue.

2015-10-12  Zoltan Bojthe

	Fix: the slot time was not always correctly chosen for the configured
	mode (i.e. modulation and coding scheme).

2015-06-22  ------ inet-3.0.0 released ------

2015-05-13  ------ inet-2.99.1 released ------

2015-04-02  Zoltan Bojthe

	Fixed 802.11 beacon packet length.

2015-03-18  Zoltan Bojthe

	Renamed LENGTH_DATAHDR to DATAFRAME_HEADER_MINLENGTH.

2015-03-19  Levente Mészáros

	Renamed the old Radio80211aControlInfo to Ieee80211ReceptionIndication.

2015-03-18  Levente Mészáros

	Transport: Added ITransportPacket interface to TCPSegment, UDPPacket, and
	SCTPMessage. This change allows generic handling of transport packets. For
	example, see TunLoopbackApp.

2015-02-11  Zoltan Bojthe

	Fixed packet length of 802.11 data frames.

2015-02-11  Zoltan Bojthe

	Added ST_DATA_WITH_QOS to 802.11 data frames.

2015-03-10  Levente Mészáros

	802.11 MAC: Fixed control frame mode. The specification requires the control
	frames to be sent with the slowest mandatory mode.

2015-02-25  Levente Meszaros

	Refactored the MAC class to work with the new 802.11 mode descriptor classes.
	Deleted obsolete Ieee80211DescriptorData, Ieee80211Descriptor classes.
	Replaced opMode field with Ieee80211ModeSet.
	Replaced various bitrate fields with Ieee80211Mode.

2015-02-14  Raphael Riebl

	Fixed memory leak, delete classifier in dtor.

2015-02-05  Zoltan Bojthe

	Replaced getParentModule calls with module parameters.

2015-01-21  Zoltan Bojthe

	Applied C++ source code modernizer.
